# Pydoku

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  justfile  main.py  pyproject.toml
.github/: dependabot.yml
.github/actions/setup-env/: action.yml
.github/workflow/: formatting.yaml  security.yaml  tests.yaml
.github/workflows/: badge.yml  badges.yml  ci.yml  code-formatting.yaml  code-formatting.yml  code-ql.yml  security.yaml  security.yml  tests.yaml  tests.yml
old_code_implem/: current_status.csv  main.py  result.csv  test.devil.csv  test.devil_2.csv  test.devil_3.csv  test.devil_4.csv  test.easy.csv  test.easy_2.csv  test.escargot.csv  test.hard.csv  test.hard_2.csv  test.hell.csv  test.medium.csv  tmp.csv
old_code_implem/src/: warnings.py
old_code_implem/src/domain/models/: cell.py  unit.py  (+2 more)
old_code_implem/tests/data/: test_3d_medusa_rule_1.csv  test_3d_medusa_rule_3.csv  test_3d_medusa_rule_4.csv  test_3d_medusa_rule_5.csv  test_3d_medusa_rule_6.csv  test_single_chains.csv  test_swordfish.csv  test_swordfish_2.csv  test_swordfish_3.csv  test_x_chains.csv  test_x_chains_2.csv  test_x_cycles_rule_1.csv  test_x_cycles_rule_2.csv  test_x_wing.csv  test_xy_chains.csv  test_xyz_wing.csv  test_y_wing.csv  test_y_wing_2.csv
pydoku/application/: solver.py
pydoku/application/checks/: check.py  check_unicity.py
pydoku/application/usecases/: check_unicity.py
pydoku/domain/exceptions/: early_stop_exception.py  unknown_update_exception.py
pydoku/domain/models/: cell.py  grid.py  sudoku.py  types.py
pydoku/domain/services/: unicity_strategy.py
pydoku/utils/: grid_tools.py
scripts/: __init__.py  linter.sh  setup.sh  tests-with-coverage.sh
src/adapters/: solve_path_txt_handler.py  sudoku_csv_handler.py  sudoku_seq_handler.py
src/domain/: cell.py  data_loader.py  grid.py  solve_path.py  solver.py  sudoku.py  units.py  updates.py
src/domain/ports/: solve_path_handler_interface.py  sudoku_handler_interface.py
src/domain/strategies/: __init__.py  strategy.py  strategy_level.py  strategy_levels.py  strategy_object.py
src/strategies/: __init__.py  strategy.py
src/strategies/base/: __init__.py  unicity.py
src/utils/: argument_parser.py  grid_tools.py  strategy_level.py  updates.py
tests/: LoaderSUT.py  conftest.py
tests/adapters/: solve_path_txt_handler_u_test.py  sudoku_csv_handler_u_test.py  sudoku_seq_handler_u_test.py
tests/domain/: cell_u_test.py  grid_u_test.py  solver_u_test.py  sudoku_u_test.py  updates_u_test.py
tests/domain/services/: test_unicity_strategy.py
tests/fixtures/: fake_strategy_object_factory.py  fake_sudoku_factory.py  grids.py  sudoku_test_builder.py
tests/fixtures/grids/: arrays.py  sequences.py
tests/strategies/base/: unicity_i_test.py  unicity_u_test.py
tests/utils/: grid_tools_u_test.py  pydoku_parser_u_test.py
(+80 files in other folders)
