[project]
name = "Pydoku"
version = "2.0.0"
description = "Python algorithmic sudoku solver"
authors = [
    {name = "Tanguy Morelle"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jaxtyping==0.3.9",
    "numpy==2.4.2",
    "pydantic==2.12.5",
]

[dependency-groups]
dev = [
    "bandit==1.9.4",
    "coverage==7.13.4",
    "pip-audit==2.10.0",
    "pytest==9.0.2",
    "ruff==0.15.2",
    "ty==0.0.18",
    "vulture==2.14",
]

[tool.ruff.lint]
ignore = ["F722"]

[tool.vulture]
min_confidence = 80
paths = ["src/", "tests/"]

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "tests/*",
]
